fix(thumbnail): fix aspect ratio problem in slideshow on IE11

--- a/src/components/thumbnail/style/lumapps/_index.scss
+++ b/src/components/thumbnail/style/lumapps/_index.scss
@@ -31,6 +31,7 @@
     &__image {
         display: block;
         max-width: 100%;
+        min-height: 1px;
         max-height: 100%;
     }
 }
